tests/compile-fail/integration__integration__timelines__duplicate_implicit.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
warning: mixture of explicit and automatic timeline indices
  ┌─ <input>:3:8
  │
3 │ script 0 foo { ins_10(100); }
  │        ^ explicit index
4 │ script bar { ins_10(100); }
  │        --- implicitly has index 0

error: duplicate timeline for index 0
  ┌─ <input>:4:8
  │
3 │ script 0 foo { ins_10(100); }
  │        - previously defined here
4 │ script bar { ins_10(100); }
  │        ^^^ redefined here


